--- a/templates/server-service.yaml
+++ b/templates/server-service.yaml
@@ -18,8 +18,13 @@ metadata:
     # to an open issue where it may not work:
     # https://github.com/kubernetes/kubernetes/issues/58662
     service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
+    # Expose the server cluster as a internal-accessible loadbalancer
+    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
 spec:
-  clusterIP: None
+  #clusterIP: None
+  type: LoadBalancer
+  selector:
+    app: {{ template "consul.name" . }}
   # We want the servers to become available even if they're not ready
   # since this DNS is also used for join operations.
   publishNotReadyAddresses: true
